--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 		<true/>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		<key>NSPhotoLibraryUsageDescription</key>
+        <string>This app requires access to the photo library.</string>
+        <key>NSCameraUsageDescription</key>
+        <string>This app requires access to the camera.</string>
 	</dict>
 </plist>
