--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.7
+  mockito: ^5.0.17
   flutter_lints: ^1.0.0
   flutter_localizations:
     sdk: flutter
